# GTDrawingClient

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  api_generated.h  graphicswidget.cpp  graphicswidget.h  graphicswidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qcustomgraphicsitem.cpp  qcustomgraphicsitem.h  resources.qrc  tablewidget.cpp  tablewidget.h  tablewidget.ui  udpreciever.cpp  udpreciever.h
Server/: api.fbs
